Changlist using the following base http://www9.atpages.jp/~drowsnug95/?p=252 source code
(http://www9.atpages.jp/~drowsnug95/wp-content/uploads/2009/10/snes9x_src.zip)

ver 20100301
+Soul Blazer works now (i think only the german version was not working!?)

ver 20100224
+Transparency Menu Option added
+Zipped ROMs Support
+HighRes Support enabled (solves Secret of Mana, Seiken 3 & Rudra no Hihou font problems)

ver 20100221
+support for SDD1 Emu added (GraphicPack NOT needed anymore!! -> removed)
+Street Fighter Alpha 2 & Star Ocean (all work)

ver 20100218
+Added Star Ocean support using the Star Ocean Grpahic Set.
You have to put "sdd1gfx.dat" & "sdd1gfx.idx" in "local\home\.snes96_snapshots\socnsdd1\" of your Dingux OS.

v1.39-ff
-base source see changes.txt

Blog:
http://crankgaming.blogspot.com/

Sources:
svn://zwischenwelt.org:20684/dingoo/Snes9x-sdl-1.39ff

Contact:
seabeams at gmx.de

^SiENcE